Landing page controllers added, admin sessions controller added

--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <%= csrf_meta_tags %>
   <title>Jets App</title>
-  <%= javascript_pack_tag "application" %>
-  <%= stylesheet_pack_tag "theme" %>
+  <%= javascript_pack_tag "admin/application" %>
+  <%= stylesheet_pack_tag "admin/theme" %>
   <link rel="shortcut icon" href="<%= favicon_path %>">
 </head>
 <body>
@@ -17,7 +17,7 @@
     <div class="row">
       <div class="col-md-9 content-body">
         <% if @title %><h1><%= @title %></h1><% end %>
-        <p>This is main application.html.erb</p>
+        <p>This is Admin application.html.erb</p>
         <%= yield %>
       </div>
     </div>
